--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script>
+      if (window.location.hostname === 'logixfleet.com' || window.location.hostname === 'www.logixfleet.com') {
+        window.location.replace('https://logixfleet.ai' + window.location.pathname + window.location.search);
+      }
+    </script>
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LogixFleet | Fleet & Delivery Management Software</title>
