--- a/index.html
+++ b/index.html
@@ -8,9 +8,139 @@
       }
     </script>
     <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LogixFleet | Fleet & Delivery Management Software</title>
-    <meta name="description" content="Fleet management. Smarter routes. Seamless delivery management for East African businesses. Track vehicles, optimize routes, and manage compliance." />
+
+    <!-- Primary Meta Tags -->
+    <title>LogixFleet | Fleet & Delivery Management Software for Africa</title>
+    <meta name="title" content="LogixFleet | Fleet & Delivery Management Software for Africa" />
+    <meta name="description" content="Complete fleet management and delivery software for African businesses. Track vehicles, optimize routes, manage compliance, and reconcile payments. Built for East Africa." />
+    <meta name="keywords" content="fleet management, delivery management, route optimization, vehicle tracking, GPS tracking, fleet software, logistics software, Kenya, East Africa, Nairobi, compliance tracking, fuel monitoring, driver app" />
+    <meta name="author" content="LogixFleet" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://logixfleet.ai/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://logixfleet.ai/" />
+    <meta property="og:title" content="LogixFleet | Fleet & Delivery Management Software for Africa" />
+    <meta property="og:description" content="Complete fleet management and delivery software for African businesses. Track vehicles, optimize routes, manage compliance, and reconcile payments." />
+    <meta property="og:image" content="https://logixfleet.ai/og-image.png" />
+    <meta property="og:site_name" content="LogixFleet" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://logixfleet.ai/" />
+    <meta name="twitter:title" content="LogixFleet | Fleet & Delivery Management Software for Africa" />
+    <meta name="twitter:description" content="Complete fleet management and delivery software for African businesses. Track vehicles, optimize routes, manage compliance, and reconcile payments." />
+    <meta name="twitter:image" content="https://logixfleet.ai/og-image.png" />
+
+    <!-- Additional SEO -->
+    <meta name="theme-color" content="#0066FF" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="LogixFleet" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "LogixFleet",
+      "applicationCategory": "BusinessApplication",
+      "operatingSystem": "Web, Android",
+      "description": "Complete fleet management and delivery software for African businesses. Track vehicles, optimize routes, manage compliance, and reconcile payments.",
+      "url": "https://logixfleet.ai",
+      "author": {
+        "@type": "Organization",
+        "name": "LogixFleet",
+        "url": "https://logixfleet.ai"
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD",
+        "description": "Custom pricing based on fleet size"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "ratingCount": "50"
+      }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "LogixFleet",
+      "url": "https://logixfleet.ai",
+      "logo": "https://logixfleet.ai/logo.png",
+      "description": "Fleet management and delivery software for African businesses",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Nairobi",
+        "addressCountry": "KE"
+      },
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "sales",
+        "availableLanguage": ["English", "Swahili"]
+      },
+      "sameAs": []
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "LogixFleet",
+      "url": "https://logixfleet.ai",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://logixfleet.ai/?s={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "itemListElement": [
+        {
+          "@type": "SiteNavigationElement",
+          "position": 1,
+          "name": "Fleet Management",
+          "description": "Professional fleet management software with compliance tracking, AI fuel monitoring, and approval workflows",
+          "url": "https://logixfleet.ai/fleet-solution"
+        },
+        {
+          "@type": "SiteNavigationElement",
+          "position": 2,
+          "name": "Delivery Solution",
+          "description": "Optimize delivery routes, track drivers in real-time, and capture proof of delivery automatically",
+          "url": "https://logixfleet.ai/delivery-solution"
+        },
+        {
+          "@type": "SiteNavigationElement",
+          "position": 3,
+          "name": "Integrations",
+          "description": "Connect LogixFleet with your existing ERP, e-commerce, and accounting systems",
+          "url": "https://logixfleet.ai/integration"
+        },
+        {
+          "@type": "SiteNavigationElement",
+          "position": 4,
+          "name": "Book a Demo",
+          "description": "Schedule a personalized demo of LogixFleet for your business",
+          "url": "https://logixfleet.ai/book-a-demo"
+        }
+      ]
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
