--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         window.location.replace('https://logixfleet.ai' + window.location.pathname + window.location.search);
       }
     </script>
-    <link rel="icon" type="image/png" href="/leaf-svgrepo-com.png" />
-    <link rel="apple-touch-icon" href="/leaf-svgrepo-com.png" />
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
@@ -77,7 +77,7 @@
       "@type": "Organization",
       "name": "LogixFleet",
       "url": "https://logixfleet.ai",
-      "logo": "https://logixfleet.ai/leaf-svgrepo-com.png",
+      "logo": "https://logixfleet.ai/logo.png",
       "description": "Fleet management and delivery software for African businesses",
       "address": {
         "@type": "PostalAddress",
