--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!-- Primary Meta Tags -->
     <title>LogixFleet | Fleet & Delivery Management Software for Africa</title>
     <meta name="title" content="LogixFleet | Fleet & Delivery Management Software for Africa" />
-    <meta name="description" content="Complete fleet management and delivery software for African businesses. Track vehicles, optimize routes, manage compliance, and reconcile payments. Built for East Africa." />
-    <meta name="keywords" content="fleet management, delivery management, route optimization, vehicle tracking, GPS tracking, fleet software, logistics software, Kenya, East Africa, Nairobi, compliance tracking, fuel monitoring, driver app" />
+    <meta name="description" content="Complete Fleet Control OS and delivery software for African businesses. Track vehicles, optimize routes, manage compliance, and reconcile payments. Built for East Africa." />
+    <meta name="keywords" content="Fleet Control OS, delivery management, route optimization, vehicle tracking, GPS tracking, fleet software, logistics software, Kenya, East Africa, Nairobi, compliance tracking, fuel monitoring, driver app" />
     <meta name="author" content="LogixFleet" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://logixfleet.ai/" />
@@ -24,7 +24,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://logixfleet.ai/" />
     <meta property="og:title" content="LogixFleet | Fleet & Delivery Management Software for Africa" />
-    <meta property="og:description" content="Complete fleet management and delivery software for African businesses. Track vehicles, optimize routes, manage compliance, and reconcile payments." />
+    <meta property="og:description" content="Complete Fleet Control OS and delivery software for African businesses. Track vehicles, optimize routes, manage compliance, and reconcile payments." />
     <meta property="og:image" content="https://logixfleet.ai/og-image.png" />
     <meta property="og:site_name" content="LogixFleet" />
     <meta property="og:locale" content="en_US" />
@@ -33,7 +33,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://logixfleet.ai/" />
     <meta name="twitter:title" content="LogixFleet | Fleet & Delivery Management Software for Africa" />
-    <meta name="twitter:description" content="Complete fleet management and delivery software for African businesses. Track vehicles, optimize routes, manage compliance, and reconcile payments." />
+    <meta name="twitter:description" content="Complete Fleet Control OS and delivery software for African businesses. Track vehicles, optimize routes, manage compliance, and reconcile payments." />
     <meta name="twitter:image" content="https://logixfleet.ai/og-image.png" />
 
     <!-- Additional SEO -->
@@ -51,7 +51,7 @@
       "name": "LogixFleet",
       "applicationCategory": "BusinessApplication",
       "operatingSystem": "Web, Android",
-      "description": "Complete fleet management and delivery software for African businesses. Track vehicles, optimize routes, manage compliance, and reconcile payments.",
+      "description": "Complete Fleet Control OS and delivery software for African businesses. Track vehicles, optimize routes, manage compliance, and reconcile payments.",
       "url": "https://logixfleet.ai",
       "author": {
         "@type": "Organization",
@@ -78,7 +78,7 @@
       "name": "LogixFleet",
       "url": "https://logixfleet.ai",
       "logo": "https://logixfleet.ai/logo.png",
-      "description": "Fleet management and delivery software for African businesses",
+      "description": "Fleet Control OS and delivery software for African businesses",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "Nairobi",
@@ -113,8 +113,8 @@
         {
           "@type": "SiteNavigationElement",
           "position": 1,
-          "name": "Fleet Management",
-          "description": "Professional fleet management software with compliance tracking, AI fuel monitoring, and approval workflows",
+          "name": "Fleet Control OS",
+          "description": "Professional Fleet Control OS software with compliance tracking, AI fuel monitoring, and approval workflows",
           "url": "https://logixfleet.ai/fleet-solution"
         },
         {
